--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,5 @@
-@import "../normalize.scss";
-@import "../base.scss";
+@import "normalize.scss";
+@import "base.scss";
 
 .justify-c {
   font-size: 1px;
@@ -10,6 +10,7 @@
     width: 100%;
     height: 0;
     overflow: hidden;
+    
   }
 }
 
@@ -34,6 +35,9 @@
   text-align: center;
   padding-bottom: 30px;
   padding-top: 40px;
+}
+body {
+  background: blue;
 }
 
 ul {
