--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,7 @@
-@import "variables.scss";
-@import "normalize.scss";
-@import "base.scss";
-@import "form.scss";
+@import "_variables.scss";
+@import "_normalize.scss";
+@import "_base.scss";
+@import "_form.scss";
 
 
   
